# nix-and-poetry

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  default.nix  pyproject.toml  shell.nix
.github/workflows/: nixbuild.yaml
nix/: sources.json
nix_and_poetry/: main.py
