[tool.poetry]
name = "nix-and-poetry"
version = "0.1.0"
description = ""
authors = ["Gasper Vozel <gv@niteo.co>"]
readme = "README.md"
packages = [{include = "nix_and_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
toml = "^0.10.2"
humanize = "^4.4.0"
click = "^8.1.3"
hammock = "^0.2.4"

[tool.poetry.scripts]
myapp = "nix_and_poetry.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
